--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,36 +1,21 @@
-/*Variabler*/
-$bg-color: #F0F0F0; 
-$nav-color: #ffffff;
-$footer-color: #0A1F1C;
-$primary-color: #3A8479;
-$secondary-color: #133833;
-$text-color: #484848;
-$padding: 0.5em;
-$font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-/*Mixins*/
-@mixin flex($justify:center, $align:center){
-    display: flex;
-    justify-content: $justify;
-    align-items: $align;
-}
+@use 'partial';
 
 body{
     margin: 0;
     box-sizing: border-box;
-    font-family: $font;
-    background-color: $bg-color;
+    font-family: partial.$font;
+    background-color: partial.$bg-color;
 
     /*Nesting - indsætter alle elementer som har direkte relation til øverste element af blokken*/
         p{
             font-size: 16px;
-            color: $text-color;
+            color: partial.$text-color;
             line-height: 1.5;
         }
 
         h1, h2, h3, h4, h5, h6{
             font-weight: 600;
-            color: $text-color;
+            color: partial.$text-color;
         }
 }
 
@@ -47,8 +32,122 @@ img{
 
 header{
     grid-column: 1/6; /*grid column start og slut på en linje i stedet for to*/
-    @include flex($justify: space-between);
-    background-color: $nav-color;
-    border-bottom: 4px solid $primary-color;
+    @include partial.flex($justify: space-between);
+    background-color: partial.$nav-color;
+    border-bottom: 4px solid partial.$primary-color; 
 
+}
+
+/*Navigation*/
+nav{
+    color: partial.$text-color;
+    height: 4em;
+    padding: 1em;
+    @include partial.flex($justify: space-between);
+
+        img{
+            width: 70px;
+        }
+
+        ul{
+            @include partial.flex;
+            list-style-type: none;
+        }   
+        
+        a{
+            color: partial.$text-color;
+            padding: partial.$padding;
+            margin: partial.$padding;
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        ul a:hover{
+            color: partial.$primary-color;
+        }
+    }
+
+    .mobile-nav {
+
+        .bars{
+            display: none;
+        }
+    }
+
+    .ToggleShow{
+        display: flex;
+        flex-direction: coloumn;
+    }
+
+    .active{
+        color: partial.$primary-color;
+    }
+
+/*Header billeder/banner*/
+.header-img{
+    position: relative;
+    margin-bottom: 1em;
+
+        .banner-tekst{
+            position: absolute;
+            top: 25%;
+            left: 5%;
+        }
+
+        h1{
+            font-size: 3.5vw;
+        }
+
+        p{
+            font-size: 2vw;
+        }
+
+        a{
+            position: absolute;
+            @include partial.btn;
+        }
+
+        .bg-billede-mobil{
+            display: none;
+        }
+}
+
+main{
+    display: grid;
+    grid-column: 1/6;
+    grid-template-columns: repeat(6, 1fr);
+
+        h2{
+            grid-column: 1/7;
+            text-align: center;
+            font-size: 30px;
+        }
+
+        .cta-wrapper{
+            grid-column: 1/7;
+            display: flex;
+            justify-content: space-around;
+        }
+}
+
+/*CTA bokse*/
+
+.cta-1{
+    @include partial.cta-box;
+
+        img{
+            margin: 0 auto;
+            width: 60%;
+            display: block;
+        }
+
+        a{
+            @include partial.btn;
+            display: block;
+        }
+
+        p{
+            margin-bottom: 2em;
+        }
 }
